--- a/list-to-do.css
+++ b/list-to-do.css
@@ -2,10 +2,13 @@ html,body{
     margin:0px;
     height:100%;
     font-family: 'Georama', sans-serif;
+    background-image: url(background.jpg);
+    background-position: center;
+    background-size: cover;
 }
 .heading{
-    background-color: rgba(132, 247, 212, 0.781);
-    color:cornflowerblue;
+    /* background-color: rgba(132, 247, 212, 0.781); */
+    color:Black;
     text-align: center;
     margin:.5rem;
     padding:5px;
@@ -13,7 +16,7 @@ html,body{
 
 .container{
     display: flex;
-    border:1px solid rgb(255, 254, 252);
+    /* border:1px solid rgb(255, 254, 252); */
     padding:10px;
     margin:.5rem;
     width: 95%;
@@ -21,7 +24,7 @@ html,body{
     flex-wrap: wrap;
 }
 .fillarea{
-    background-image: linear-gradient(to right, rgba(255, 0, 0, 0.151), rgba(255, 72, 0, 0.767));
+    /* background-image: linear-gradient(to right, rgba(255, 0, 0, 0.151), rgba(255, 72, 0, 0.767)); */
     display: inline-block;
     border:1px solid rgb(14, 13, 13);
     width: 95%;
@@ -66,7 +69,7 @@ input:focus{outline:none}
     display: flex;
     flex-wrap: wrap;
     border-radius: 5px;
-    background-image: linear-gradient(to right, rgba(255, 238, 0, 0.384), rgba(157, 255, 0, 0.767));
+    background-image: linear-gradient(to right, rgba(247, 225, 101, 0.384), rgba(157, 255, 0, 0));
 }
 ul{list-style-type: none;}
 
